--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,8 +27,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: Calculator/
-          file: ./Dockerfile
+          context: ./Calculator/
+          file: ./Calculator/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/calculator-web-app:latest
 
